@@ -62,6 +62,7 @@ Latest changes:
     * reg SIP from outside (by MaxMuster)
     * remove AVM's NAS webinterface and internal memory file
     * remove 7170 (unneeded) piglet bitfile
+    * remove AVM's webdav
 
 - New packages, libs, modules:
     * aiccu 20070115
